# ftdata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/datasets/: sample_chatml.jsonl
src/ftdata/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/ftdata/contamination/: __init__.py  benchmarks.py  ngram.py
src/ftdata/core/: __init__.py  formats.py  loader.py  models.py
src/ftdata/dedup/: __init__.py  exact.py  minhash.py  semantic.py
src/ftdata/diversity/: __init__.py  clustering.py  scores.py
src/ftdata/profiling/: __init__.py  language.py  stats.py
src/ftdata/quality/: __init__.py  heuristics.py  llm_judge.py  pii.py  rules.py
src/ftdata/report/: __init__.py  cli_report.py  html.py
src/ftdata/report/templates/: report.html.j2
tests/: conftest.py
tests/fixtures/datasets/: minimal.jsonl  quality_issues.jsonl  simple_alpaca.jsonl  simple_chatml.jsonl  with_duplicates.jsonl
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_exact_dedup.py  test_formats.py  test_loader.py  test_models.py  test_pii.py  test_quality_rules.py  test_stats.py
